[package]
name = "actor_test"
version = "0.1.0"
authors = ["Raul <raul.tang.lc@gmail.com>"]
edition = "2018"

[dependencies]
criterion = "0.3"
rand = "0.7"
tempfile = "3.1.0"
tokio = { version = "0.2.6", features = ["full"] }
log = "0.4.8"
log4rs = "0.8.3"
metrics = "0.11.1"
metrics-runtime = "0.1.0"
metrics-exporter-log = "0.3.0"

actix = "0.8"

futures01 = { package = "futures", version = "0.1.29" }

crossbeam-queue = "0.2.3"
flume = "0.7.1"
itertools = "0.9.0"
crossbeam-channel = "0.4.2"

[[bench]]
name = "bench_actor"
harness = false